# schoolos

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  tmp_chat.json  tmp_result.json  tmp_sub.json  tmp_sub2.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/audit/: page.tsx
frontend/src/app/communication/: page.tsx
frontend/src/app/data/: page.tsx
frontend/src/app/duties/: page.tsx
frontend/src/app/pickup/: page.tsx
frontend/src/app/social/: page.tsx
frontend/src/app/substitution/: page.tsx
frontend/src/app/timetable/: page.tsx
frontend/src/components/: sidebar.tsx  stat-card.tsx
frontend/src/lib/: api.ts
infra/postgres/: init.sql
keys_Not Part of Code/: ssh-key-2026-04-14.key  ssh-key-2026-04-14.key.pub
samples/: classes.csv  parents.csv  periods.csv  students.csv  subjects.csv  teachers.csv  timetable.csv
services/gateway/: Dockerfile  main.py
services/gateway/ai/: audit.py  constraint_parser.py  duty_agent.py  duty_pdf.py  messenger.py  notifier.py  pdf_export.py  solver.py  substitution_agent.py  substitution_pdf.py
services/gateway/routers/: audit.py  communication.py  dashboard.py  duty.py  ingest.py  pickup.py  social.py  substitution.py  timetable.py
shared/: config.py
shared/auth/: tenant.py
shared/db/: base.py  connection.py  models.py
